<resources>
    <string name="app_name">LevanF</string>

    <string name="radial">Radial</string>
    <string name="axial">Axial</string>
    <string name="lineal">Lineal</string>
    <string name="angular">Angular</string>
    <string name="seguidor">Seguidor</string>


    <string name="generar_svaj">Generar SVAJ</string>
    <string name="grados"> grados</string>
    <string name="tramos">Tramos</string>
    <string name="radia_lineal">Radia - Lineal</string>
    <string name="flecha_atras">flecha atras</string>
    <string name="generaci_n_de_svaj">Generación de SVAJ</string>
    <string name="segundos">Segundos</string>
    <string name="gradosCap">Grados</string>
    <string name="agregar_tramos">Agregar tramos +</string>
    <string name="total">"Total: "</string>
    <string name="eje_x">Eje X</string>

    <string name="contrasena">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuario</string>
    <string name="levanf">LevanF</string>

    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo electrónico</string>
    <string name="despl_cese_para_ver_m_s_gr_ficas_de_datos">Desplácese para ver más gráficas de datos</string>
    <string name="svaj">SVAJ</string>
    <string name="crear_perfil">Crear Perfil</string>
    <string name="logout">LogOut</string>
    <string name="error_al_iniciar_sesi_n">Error al iniciar sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="segmentos">Segmentos</string>
    <string name="ecuaciones">Ecuaciones</string>
    <string name="altura">Altura</string>
    <string name="limpiar">Limpiar</string>
    <string name="velocidad">RPM: </string>
    <string name="tramos_guardados">Tramos Guardados</string>
    <string name="tituloPerfil">Generar Perfil</string>
    <string name="unidades">"Unidades: \nmm"</string>
    <string name="rodillo">Diametro \nRodillo</string>
    <string name="base">Diametro\nBase\n</string>
    <string name="regresar">Regresar</string>
    <string name="ver_perfil">Ver Perfil</string>
    <string name="guardar_perfil">Guardar perfil</string>
    <string name="perfil_geometrico">Perfil Geométrico</string>
    <string name="exportar">Exportar Perfil</string>
    <string name="paso">Paso</string>
    <string name="botonExcel">.xlsx</string>
    <string name="botonTxt">.txt</string>
    <string name="botonDXF">.dxf</string>
    <string name="seleccion_exportar">Elija el formato para exportar</string>

</resources>