<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PerfilGraphActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/perfil_geometrico"
        android:textSize="28sp"
        />

    <com.github.mikephil.charting.charts.ScatterChart
        android:id="@+id/graficaPerfil"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/seleccion_exportar"
        android:textSize="20sp"
        />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btnGrSeleccionExportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        android:layout_gravity="center"
        app:selectionRequired="true"
        app:checkedButton="@+id/btnDxf"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExcel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonExcel" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDxf"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonDXF"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTxt"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonTxt"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button android:id="@+id/btnExportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/exportar"
        android:textSize="16sp"
        android:layout_margin="10dp"
        />

</LinearLayout>