<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".CrearPerfil">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/black"/>

    <TextView android:id="@+id/tvTituloPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloPerfil"
        android:textSize="36sp"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        >

        <TextView android:id="@+id/tvUnidades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unidades"
            android:layout_marginHorizontal="10dp"
            android:textSize="16sp"
            android:textAlignment="center"
            />

        <ImageView android:id="@+id/ivPerfil"
            android:layout_width="180dp"
            android:layout_height="450dp"
            android:src="@drawable/perfil"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <EditText android:id="@+id/etRodillo"
                android:inputType="numberDecimal"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="50dp"
                />

            <TextView android:id="@+id/tvRodillo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rodillo"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginBottom="120dp"
                />

            <EditText android:id="@+id/etBase"
                android:inputType="numberDecimal"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                />

            <TextView android:id="@+id/tvBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base"
                android:layout_gravity="center"
                android:textAlignment="center"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <Button android:id="@+id/btnVerPerfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ver_perfil"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            />

    </LinearLayout>
</LinearLayout>