<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <TextView android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:textSize="48sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView android:id="@+id/userid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="24sp"
            android:textSize="24sp"
            android:text=""
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"/>
    </LinearLayout>

    <TextView android:id="@+id/tvRadial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/radial"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/altura_imagen"
        android:layout_height="@dimen/altura_imagen"
        app:cardCornerRadius="16dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/light_gray"
        app:cardElevation="2dp">

        <ImageButton android:id="@+id/btnRadial"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/radial"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            />
    </androidx.cardview.widget.CardView>

    <TextView android:id="@+id/tvAxial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/axial"
        android:textAlignment="center"
        android:layout_marginVertical="10dp"
        />

    <ImageButton android:id="@+id/btnAxial"
        android:layout_width="@dimen/altura_imagen"
        android:layout_height="@dimen/altura_imagen"
        android:layout_gravity="center"
        />

</LinearLayout>