<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GraphsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/black"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="16dp"
            android:text="@string/svaj"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView android:id="@+id/svGraphs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/despl_cese_para_ver_m_s_gr_ficas_de_datos"

        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_weight="3"
        >


        <LinearLayout
            android:id="@+id/gene"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/Desplazamiento"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginBottom="16dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/Velocidad"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginBottom="16dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/Aceleracion"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginBottom="16dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/Golpeteo"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

    </ScrollView>
    
    <LinearLayout android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/svGraphs"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        >


        <Button android:id="@+id/btnCrearPerfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/crear_perfil"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            />
    </LinearLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>
